--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             FEM
         </h1>
         <!-- navigation -->
-        <nav>
+        <nav style="display: none;">
+            <label for="difficulty">Filter by:</label>
             <select name="difficulty" id="difficulty">
                 <option value="newbie">Newbie</option>
                 <option value="junior">Junior</option>
@@ -26,30 +27,423 @@
         </nav>
     </header>
 
-    <main>
+    <main class="solution-card-container">
         <!--solution card container -->
-        <div class="solution-card-container">
-            <div class="solution-card" id="">
-                <div class="solution-card__preview">
-                    <img src="./images/Three column card component.png" alt="Three column card component">
-                </div>
-                <div class="solution-card__content">
-                    <h2 class="challenge-name">Three column card component</h2>
-                    <div class="solution-other-info">
-                        <div class="solution-stack-info">
-                            <ul class="solution-stack">
-                                <li>HTML</li>
-                                <li>CSS</li>
-                            </ul>
-                        </div>
-                        <div class="solution-badge"></div>
-                    </div>
-                    <div class="solution-cta-container">
-                        <button><a href="#">code</a></button>
-                        <button><a href="./Newbie/Three column card component/index.html">Live preview</a></button>
-                    </div>
-                </div>
+
+
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+
+                <img src="./images/Three column card component.png" alt="Three column card component">
+
             </div>
+            <div class="solution-card__content">
+
+                <h2 class="challenge-name">Three column card component</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+
+                    </ul>
+
+
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+
+                    <button><a href="./Newbie/Three column card component/index.html"
+                            target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <!-- card 2 -->
+
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+
+                <img src="./images/Social proof section.png" alt="Social proof section">
+
+            </div>
+            <div class="solution-card__content">
+
+                <h2 class="challenge-name">Social proof section</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+
+                    </ul>
+
+
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+
+                    <button><a href="./Newbie/Social proof section/index.html" target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+        <!-- card 3 -->
+
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+
+                <img src="./images/Single price grid component.png" alt="Single price grid component">
+
+            </div>
+            <div class="solution-card__content">
+
+                <h2 class="challenge-name">Single price grid component</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+
+                    </ul>
+
+
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+
+                    <button><a href="./Newbie/single price grid component/index.html"
+                            target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <!-- card 4 -->
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+
+                <img src="./images/QR code component.png" alt="QR code component">
+
+            </div>
+            <div class="solution-card__content">
+
+                <h2 class="challenge-name">QR code component</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+
+                    </ul>
+
+
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+
+                    <button><a href="./Newbie/QR Code component/index.html" target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <!-- card 5 -->
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+
+                <img src="./images/Product preview card.png" alt="Product preview card">
+
+            </div>
+            <div class="solution-card__content">
+
+                <h2 class="challenge-name">Product preview card</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+
+                    </ul>
+
+
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+
+                    <button><a href="./Newbie/Product preview card/index.html" target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <!-- card 6 -->
+
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+
+                <img src="./images/order summary card component.png" alt="order summary card component">
+
+            </div>
+            <div class="solution-card__content">
+
+                <h2 class="challenge-name">order summary card component</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+
+                    </ul>
+
+
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+
+                    <button><a href="./Newbie/Order-summery-component/index.html" target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <!-- card 7 -->
+
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+                <!-- TODO: challenge preview -->
+                <img src="./images/NFT preview card.png" alt="NFT preview card">
+
+            </div>
+            <div class="solution-card__content">
+
+                <!-- TODO: challenge name -->
+
+                <h2 class="challenge-name">NFT preview card</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <!-- TODO: challenge stack -->
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+
+                    </ul>
+
+                    <!-- TODO: challenge badge -->
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+                    <!-- TODO: challenge url -->
+                    <button><a href="./Newbie/NFT-preview-card-component/index.html"
+                            target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- card 8 -->
+
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+                <!-- TODO: challenge preview -->
+                <img src="./images/Intro component with sign up form.png" alt="Intro component with sign up form">
+
+            </div>
+            <div class="solution-card__content">
+
+                <!-- TODO: challenge name -->
+
+                <h2 class="challenge-name">Intro component with sign up form</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <!-- TODO: challenge stack -->
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                    </ul>
+
+                    <!-- TODO: challenge badge -->
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+                    <!-- TODO: challenge url -->
+                    <button><a href="./Newbie/Intro component with sign up form/index.html"
+                            target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- Card 9-->
+
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+                <!-- TODO: challenge preview -->
+                <img src="./images/FAQ Accordian.png" alt="FAQ Accordian">
+
+            </div>
+            <div class="solution-card__content">
+
+                <!-- TODO: challenge name -->
+
+                <h2 class="challenge-name">FAQ Accordian</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <!-- TODO: challenge stack -->
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                    </ul>
+
+                    <!-- TODO: challenge badge -->
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+                    <!-- TODO: challenge url -->
+                    <button><a href="./Newbie/Faq accordion/" target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- card 10 -->
+
+        <div class="solution-card" id="newbie">
+
+            <div class="solution-card__preview">
+                <!-- TODO: challenge preview -->
+                <img src="./images/Interactive rating component.png" alt="Interactive rating component">
+
+            </div>
+            <div class="solution-card__content">
+
+                <!-- TODO: challenge name -->
+
+                <h2 class="challenge-name">Interactive rating component</h2>
+
+                <div class="solution-other-info">
+
+                    <ul class="solution-stack">
+
+                        <!-- TODO: challenge stack -->
+
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+
+                    </ul>
+
+                    <!-- TODO: challenge badge -->
+                    <div class="solution-badge" style="color: #00a8ff;">Newbie</div>
+
+                </div>
+
+                <div class="cta-container">
+
+                    <button><a href="#">code</a></button>
+                    <!-- TODO: challenge url -->
+                    <button><a href="./Newbie/Interactive-rating-component/index.html"
+                            target="_blank">Preview</a></button>
+
+                </div>
+
+            </div>
+
         </div>
     </main>
     <script src="./script.js"></script>
