done with js part

--- a/Junior/Advice generator app/index.html
+++ b/Junior/Advice generator app/index.html
@@ -19,12 +19,12 @@
 
             <!-- advice id -->
             <p class="advice-id">
-                Advice #<span id="advice-id_number">Loading...</span>
+                Advice #<span class="advice-id_number">Loading...</span>
             </p>
 
             <!-- advice content -->
             <p class="advice-content">
-                It is easy to sit up and take notice, what's difficult is getting up and taking action
+               Loading...
             </p>
 
         </div>
@@ -36,7 +36,7 @@
         <img src="images/pattern-divider-desktop.svg" alt="divider for desktop" class="divider divider-desktop">
 
         <!-- dice button -->
-        <button class="dice-btn">
+        <button class="dice-btn"  id="btn">
             <img src="images/icon-dice.svg" alt="dice to generate new advice">
         </button>
 
